--- a/public/index.html
+++ b/public/index.html
@@ -4,29 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy | CashGPT</title>
+    <title>Let's talk CASH</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body class="">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <img src="https://img.freepik.com/free-photo/painting-mountain-lake-with-mountain-background_188544-9126.jpg" height="72rem">
-            &ThickSpace;&ThickSpace;&ThickSpace;<!-- I have no idea if there's a better way to do this-->
-            <a class="navbar-brand" href="index.html">CashGPT</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="cashgpt.html">Start</a>
-                    <a class="nav-link" href="examples.html">View examples</a>
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                </div>
-            </div>
-        </div>
+    <nav class="navbar navbar-expand bg-body-tertiary">
+        <img src="images/logo.png" height="72rem">
+        &ThickSpace;
+        &ThickSpace;
+        <!-- I have no idea if there's a better way to do this-->
+        <a class="nav-link" href="cashgpt.html"><b>Let's talk!</b></a>
+        &ThickSpace;
+        &ThickSpace;
+        <a class="nav-link" href="examples.html">View examples</a>
     </nav>
     <br>
     <div class="container">
