--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's talk CASH</title>
+    <title>Let's Talk Cash</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -15,6 +15,7 @@
         &ThickSpace;
         &ThickSpace;
         <!-- I have no idea if there's a better way to do this-->
+        <a class="navbar-brand" href="#">CashGPT</a>
         <a class="nav-link" href="cashgpt.html"><b>Let's talk!</b></a>
         &ThickSpace;
         &ThickSpace;
@@ -27,6 +28,7 @@
                 <div class="card" style="width: 24rem;">
                     <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" class="card-img-top"
                         alt="...">
+                        <!--https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYr3Xzt0Bkhz9jdsBe5R7yxYvB3KRpqdlJam9fCQqfKrOR5HxCvmHJZUpj3AwCGv6D2Cg:https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Smartphone_with_ChatGPT_text_on_the_US_dollar_banknotes_background_%252852916923766%2529.jpg/1280px-Smartphone_with_ChatGPT_text_on_the_US_dollar_banknotes_background_%252852916923766%2529.jpg&usqp=CAU-->
                     <div class="card-body">
                         <h5 class="card-title">CashGPT</h5>
                         <p class="card-text">Try out our AI for financial good! Based on ChatGPT.</p>
@@ -38,6 +40,7 @@
                 <div class="card" style="width: 24rem;">
                     <img src="https://buffer.com/cdn-cgi/image/w=1000,fit=contain,q=90,f=auto/library/content/images/size/w1200/2023/09/instagram-image-size.jpg"
                         class="card-img-top" alt="...">
+                        <!--https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfg6rY6a4v9jHO-dR8Gb4UgwnoeFF2_pMjuDciaHvFmzacEQ65Uxvi1OuNEE7pcJqHG5g:https://pbs.twimg.com/media/GFrw-3VXEAAm1DJ.jpg:large&usqp=CAU-->
                     <div class="card-body">
                         <h5 class="card-title">About</h5>
                         <p class="card-text">Read more about what this is for!</p>
@@ -47,7 +50,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 24rem;">
-                    <img src="https://buffer.com/cdn-cgi/image/w=1000,fit=contain,q=90,f=auto/library/content/images/size/w1200/2023/09/instagram-image-size.jpg"
+                    <img src="images/privacy.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Privacy Policy</h5>
