navbar pt 2, fix cashgpt output, slightly change index.html

--- a/public/about.html
+++ b/public/about.html
@@ -10,23 +10,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <img src="https://img.freepik.com/free-photo/painting-mountain-lake-with-mountain-background_188544-9126.jpg"
-                height="72rem">
-            &ThickSpace;&ThickSpace;&ThickSpace;<!-- I have no idea if there's a better way to do this-->
-            <a class="navbar-brand" href="index.html">CashGPT</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="cashgpt.html">Start</a>
-                    <a class="nav-link" href="examples.html">View examples</a>
-                </div>
-            </div>
-        </div>
+    <nav class="navbar navbar-expand bg-body-tertiary">
+        <img src="images/logo.png" height="72rem">
+        &ThickSpace;
+        &ThickSpace;
+        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="nav-link" href="cashgpt.html"><b>Let's talk!</b></a>
     </nav>
 
     <br>
