--- a/public/cashgpt.html
+++ b/public/cashgpt.html
@@ -12,6 +12,9 @@
 <body class="text-bg-info">
     <div class="container">
         <br>
+        <h1>Let's talk Cash!</h1>
+        <h3>Keep an answer blank if you have 0 or if the question does not apply.</h3>
+        <br>
         <form>
             <div class="mb-3">
                 <label for="goalInput" class="form-label">What are your goals for the future?</label>
@@ -32,11 +35,11 @@
             </div>
             <br>
             <div class="mb-3">
-                <label for="savingInput" class="form-label">Do you have any savings?</label>
+                <label for="savingInput" class="form-label">How much do you have in savings?</label>
                 <input class="form-control" id="savingInput">
             </div>
             <div class="mb-3">
-                <label for="fundInput" class="form-label">Do you have an emergency fund?</label>
+                <label for="fundInput" class="form-label">How much do you have saved as an emergency fund?</label>
                 <input class="form-control" id="fundInput">
             </div>
             <div class="mb-3">
