--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,15 @@
         <img src="images/logo.png" height="72rem">
         &ThickSpace;
         &ThickSpace;
-        <!-- I have no idea if there's a better way to do this-->
-        <a class="navbar-brand" href="#">CashGPT</a>
+        <a class="navbar-brand" href="index.html">Home</a>
         <a class="nav-link" href="cashgpt.html"><b>Let's talk!</b></a>
-        &ThickSpace;
-        &ThickSpace;
-        <a class="nav-link" href="examples.html">View examples</a>
     </nav>
     <br>
     <div class="container">
         <div class="row">
             <div class="col">
                 <div class="card" style="width: 24rem;">
-                    <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" class="card-img-top"
+                    <img src="images/cashgpt.png" class="card-img-top"
                         alt="...">
                         <!--https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYr3Xzt0Bkhz9jdsBe5R7yxYvB3KRpqdlJam9fCQqfKrOR5HxCvmHJZUpj3AwCGv6D2Cg:https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Smartphone_with_ChatGPT_text_on_the_US_dollar_banknotes_background_%252852916923766%2529.jpg/1280px-Smartphone_with_ChatGPT_text_on_the_US_dollar_banknotes_background_%252852916923766%2529.jpg&usqp=CAU-->
                     <div class="card-body">
