final changes: add non-ai pages + remove debug log messages

--- a/public/about.html
+++ b/public/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand bg-body-tertiary">
-        <img src="images/logo.png" height="72rem">
+        <img src="images/logo.png" height="72rem" style="padding-left:0.5em">
         &ThickSpace;
         &ThickSpace;
         <a class="navbar-brand" href="index.html">Home</a>
@@ -19,17 +19,16 @@
     </nav>
 
     <br>
-    <div class="alert alert-primary d-flex align-items-center" role="alert">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-            class="bi bi-exclamation-diamond" viewBox="0 0 16 16">
-            <path
-                d="M6.95.435c.58-.58 1.52-.58 2.1 0l6.515 6.516c.58.58.58 1.519 0 2.098L9.05 15.565c-.58.58-1.519.58-2.098 0L.435 9.05a1.48 1.48 0 0 1 0-2.098zm1.4.7a.495.495 0 0 0-.7 0L1.134 7.65a.495.495 0 0 0 0 .7l6.516 6.516a.495.495 0 0 0 .7 0l6.516-6.516a.495.495 0 0 0 0-.7L8.35 1.134z" />
-            <path
-                d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z" />
-        </svg>
-        <div>
-            &ThickSpace; Still a work in progress! Check back soon.
-        </div>
+    <div class="container">
+        <p>Let's Talk Cash is our club's take on Girls Who Code's AI4FinancialGood challenge.</p>
+        <p>The project includes pages supporting the main feature of CashGPT.</p>
+        <p>CashGPT integrates OpenAI's API with ChatGPT version 3.5, and is customized to give topical 
+            and relevant advice when given inputs for the user's financial details.
+        </p>
+        <p>The code used for the website is open-source and can be found on GitHub.</p>
+        <br>
+        <p>To see CashGPT in action without a OpenAI key, check out 
+            <a href="examples.html">our examples page.</a></p>
     </div>
 </body>
 
