--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body class="">
     <nav class="navbar navbar-expand bg-body-tertiary">
-        <img src="images/logo.png" height="72rem">
+        <img src="images/logo.png" height="72rem" style="padding-left:0.5em">
         &ThickSpace;
         &ThickSpace;
         <a class="navbar-brand" href="index.html">Home</a>
@@ -23,8 +23,7 @@
             <div class="col">
                 <div class="card" style="width: 24rem;">
                     <img src="images/cashgpt.png" class="card-img-top"
-                        alt="...">
-                        <!--https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYr3Xzt0Bkhz9jdsBe5R7yxYvB3KRpqdlJam9fCQqfKrOR5HxCvmHJZUpj3AwCGv6D2Cg:https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Smartphone_with_ChatGPT_text_on_the_US_dollar_banknotes_background_%252852916923766%2529.jpg/1280px-Smartphone_with_ChatGPT_text_on_the_US_dollar_banknotes_background_%252852916923766%2529.jpg&usqp=CAU-->
+                        alt="CashGPT card image">
                     <div class="card-body">
                         <h5 class="card-title">CashGPT</h5>
                         <p class="card-text">Try out our AI for financial good! Based on ChatGPT.</p>
@@ -34,8 +33,8 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 24rem;">
-                    <img src="https://buffer.com/cdn-cgi/image/w=1000,fit=contain,q=90,f=auto/library/content/images/size/w1200/2023/09/instagram-image-size.jpg"
-                        class="card-img-top" alt="...">
+                    <img src="images/about.png"
+                        class="card-img-top" alt="Information symbol">
                         <!--https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfg6rY6a4v9jHO-dR8Gb4UgwnoeFF2_pMjuDciaHvFmzacEQ65Uxvi1OuNEE7pcJqHG5g:https://pbs.twimg.com/media/GFrw-3VXEAAm1DJ.jpg:large&usqp=CAU-->
                     <div class="card-body">
                         <h5 class="card-title">About</h5>
@@ -47,7 +46,7 @@
             <div class="col">
                 <div class="card" style="width: 24rem;">
                     <img src="images/privacy.jpg"
-                        class="card-img-top" alt="...">
+                        class="card-img-top" alt="Privacy lock symbol">
                     <div class="card-body">
                         <h5 class="card-title">Privacy Policy</h5>
                         <p class="card-text">Boring topics that are still necessary to share</p>
