--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                         alt="CashGPT card image">
                     <div class="card-body">
                         <h5 class="card-title">CashGPT</h5>
-                        <p class="card-text">Try out our AI for financial good! Based on ChatGPT.</p>
+                        <p class="card-text">Try out our AI for financial good! Based on ChatGPT. Warning: this will not work on GitHub Pages. It must be ran through npm to function.</p>
                         <a href="cashgpt.html" class="btn btn-primary">Start</a>
                     </div>
                 </div>
